--- a/contato.html
+++ b/contato.html
@@ -29,7 +29,6 @@
 
 <body>
   <!-- HEADER -->
-
   <div id="hw-hero">
     <div class="header header1">
       <!-- TOP BAR -->
@@ -37,9 +36,24 @@
         <div class="row">
           <div class="col-sm-6">
             <ul class="phone">
-              <li><span class="typcn typcn-phone-outline"></span> (81) 3136-2356</li>
+              <li><span class="typcn typcn-phone-outline"></span> (81) 3136-2356 | (81) 3136-2774</li>
               <li><a href="https://www.facebook.com/contatoscont/" target="_blank"><i class="fa fa-facebook"></i></a></li>
               <li><a href="https://instagram.com/contatos_contabilidade/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://www.linkedin.com/company/contatoscont/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.youtube.com/channel/UCy04n9KSHoX_W-Uyam9dtDw" target="_blank"><i class="fa fa-youtube"></i></a></li>
+              
+                    <li><a href="https://api.whatsapp.com/send?phone=5581998580151&text=Ol%C3%A1%2C%20quero%20saber%20mais%20sobre%20os%20servi%C3%A7os%20da%20Contatos%20Contabilidade!" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
+              <!-- <li><a href="#" class="danger" data-toggle="popover" data-placement="bottom"><i class="fa fa-calendar"></i></a>
+                <div >
+                  <div class="body">
+                    <div id="calendar" id="" style="display: none">
+                      <div id="calendar_header"><i class="icon-chevron-left"></i>          <h1></h1><i class="icon-chevron-right"></i>         </div>
+                      <div id="calendar_weekdays"></div>
+                      <div id="calendar_content"></div>
+                    </div>
+                    </div>
+                </div>
+              </li> -->
             </ul>
           </div>
           <div class="col-sm-6">
@@ -206,7 +220,9 @@
             <div class="col-sm-12 col-md-9">
               <h4>DEIXE-NOS UMA MENSAGEM</h4>
               <p>Clique no e-mail abaixo e entre em contato conosco!</p>
-              <span><a style="color: #3190E7 !important;" href="mailto:atendimento@contatoscontabilidade.com.br">atendimento@contatoscontabilidade.com.br</a></span>
+              <span><a target="_blank" href="https://api.whatsapp.com/send?phone=5581998580151&text=Ol%C3%A1%2C%20quero%20saber%20mais%20sobre%20os%20servi%C3%A7os%20da%20Contatos%20Contabilidade!"><img style="width: 10%; height: auto;" class="" src="images/wpp-logo.svg" alt=""/></a></span><br><br>
+              <span><a style="color: #3190E7 !important;" href="mailto:atendimento@contatoscontabilidade.com.br">atendimento@contatoscontabilidade.com.br</a></span><br>
+              
             </div>
           </div>
           </div>
@@ -222,7 +238,7 @@
             <div class="col-sm-12 col-md-9">
               <h4>VISITE NOSSO ESCRITÓRIO</h4>
               <p>Agamenon Empresarial<br/>Av. Agamenon Magalhães, 1019 PV 8 SL 802<br/>Maurício de Nassau - Caruaru - PE</p>
-              <span>Telefone: (81) 3136-2356</span>
+              <span>Telefone: (81) 3136-2356 |  (81) 3136-2774 </span>
             </div>
             </div>
           </div>
@@ -258,7 +274,7 @@
 </div>
 <span>
   <label id="label"><img id="loadingimg" src="http://dev.cloudcell.co.uk/bin/loading.gif"/>   </label>
-  <p><input name="submit" type="submit" id="submit" class="submit" value="Enviar" tabindex="5" /></p>  
+  <p><input name="submit" type="submit" id="submit" class="submit" value="Enviar" tabindex="5" /></p>
 </span>
 
 <style>
@@ -322,8 +338,9 @@ img#loadingimg{
             <div class="col-sm-2">
               <div class="footer-element">
                 <span class="typcn typcn-phone-outline"></span>
-                <p>POR<br>TELEFONE:<span>
-                  (81) 3136-2356
+                <p>POR TELEFONE:<span>
+                  (81) 3136-2356<br>
+                  (81) 3136-2774
                   </span>
                 </p>
               </div>
@@ -337,15 +354,18 @@ img#loadingimg{
       <div class="row">
         <!-- FOOTER WIDGET -->
         <div class="col-sm-3">
-          <div class="footer-widget">
-            <div class="small-logo"><img src="images/contatos-white.png" alt=""></div>
-            <p>Presente no mercado de Caruaru e Região Agreste de Pernambuco desde 1991, a Contatos Contabilidade atua de forma singular prestando serviços contábeis com qualidade e eficiência.</p>
-            <ul class="social-links">
-              <li><a href="https://fb.com/contatoscont" target="_blank" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="https://instagram.com/contatos_contabilidade" target="_blank" title="Linkedin"><i class="fa fa-instagram"></i></a></li>
-            </ul>
-          </div>
-        </div>
+						<div class="footer-widget">
+							<div class="small-logo"><img src="images/contatos-white.png" alt=""></div>
+							<p>Presente no mercado de Caruaru e Região Agreste de Pernambuco desde 1991, a Contatos Contabilidade atua de forma singular prestando serviços contábeis com qualidade e eficiência.</p>
+							<ul class="social-links">
+								<li><a href="https://fb.com/contatoscont" target="_blank" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+								<li><a href="https://instagram.com/contatos_contabilidade" target="_blank" title="Linkedin"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="https://www.linkedin.com/company/contatoscont/" target="_blank" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+								<li><a href="https://www.youtube.com/channel/UCy04n9KSHoX_W-Uyam9dtDw" target="_blank" title="Linkedin"><i class="fa fa-youtube"></i></a></li>
+								<li><a href="https://api.whatsapp.com/send?phone=5581998580151&text=Ol%C3%A1%2C%20quero%20saber%20mais%20sobre%20os%20servi%C3%A7os%20da%20Contatos%20Contabilidade!" target="_blank" title="Linkedin"><i class="fa fa-whatsapp"></i></a></li>
+							</ul>
+						</div>
+					</div>
         <!-- END FOOTER WIDGET -->
         <!-- FOOTER WIDGET -->
         <div class="col-sm-3">
@@ -376,21 +396,21 @@ img#loadingimg{
         </div>
         <!-- END FOOTER WIDGET -->
         <!-- FOOTER WIDGET -->
-        <div class="col-sm-3">
-          <div class="footer-widget">
-            <h5>NEWSLETTER</h5>
-            <p>Digite seu e-mail e assine nossa newsletter</p>
-            <div id="mc_embed_signup">
-              <form class="form-inline validate material" action="" method="POST" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
-                <input id="mce-EMAIL" type="email" name="EMAIL" placeholder="E-mail" required>
-                <div style="position: absolute; left: -5000px;">
-                  <input type="text" name="b_b5638e105dac814ad84960d90_9345afa0aa" tabindex="-1" value="">
-                </div>
-                <input type="submit" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe" class="mtr-btn button-blue">
-              </form>
-            </div>
-          </div>
-        </div>
+        <!--<div class="col-sm-3">
+						<div class="footer-widget">
+							<h5>NEWSLETTER</h5>
+							<p>Digite seu e-mail e assine nossa newsletter</p>
+							<div id="mc_embed_signup">
+								<form class="form-inline validate material" action="" method="POST" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
+									<input id="mce-EMAIL" type="email" name="EMAIL" placeholder="E-mail" required>
+									<div style="position: absolute; left: -5000px;">
+										<input type="text" name="b_b5638e105dac814ad84960d90_9345afa0aa" tabindex="-1" value="">
+									</div>
+									<input type="submit" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe" class="mtr-btn button-blue">
+								</form>
+							</div>
+						</div>
+					</div>-->
         <!-- END FOOTER WIDGET -->
       </div>
     </div>
